# demo-crypto-app

./: .sesskey  app.py  pyproject.toml  requirements.txt
components/: backtest_values.py  charts.py  layout.py
lib/: __init__.py  aaa.csv  backtest.py  dataframe.py  graph.py  indicators.py
pages/: ai.py  analysis.py  backtesting.py  crypto.py  home.py
pages/data/: cryptos.db
