[project]
name = "demo-crypto-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ccxt>=4.4.86",
    "fastlite>=0.1.3",
    "fh-plotly>=0.2.4",
    "langchain>=0.3.25",
    "langchain-ollama>=0.3.3",
    "langgraph>=0.4.7",
    "monsterui>=1.0.21",
    "pandas>=2.2.3",
    "plotly>=6.1.2",
    "python-fasthtml>=0.12.19",
    "uvicorn>=0.34.2",
    "vectorbt>=0.27.1",
    "numpy==1.26.4",
]
